# hackathon_aws_gameBuilderChallenge

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
backend/: app.py  test_app.py
backend/context/: db.py
backend/infrastructure/db/: character.py  score.py  user.py
backend/model/: user.py
cdk/: package-lock.json
db/: init.sql
frontend/: app.py
frontend/assets/pyxres/: mario.pyxres
frontend/context/: api.py  gamestate.py
frontend/model/api/: character.py  score.py
frontend/model/ui/: background.py  blast.py  player.py
frontend/scene/: play.py  result.py  title.py
frontend/service/: character.py  score.py  user.py
frontend/util/: logger.py  state.py
scripts/: ecr.sh
src/: app.py
src/assets/pyxres/: heart.pyxres  mario.pyxres
src/context/: db.py  gamestate.py
src/infrastructure/db/: character.py  score.py  user.py
src/model/: character.py  enemy.py  player.py  score.py  user.py
src/model/db/: character.py  score.py  user.py
src/model/ui/: bullet.py  enemy.py  player.py
src/scene/: play.py  result.py  title.py
src/service/: character.py  score.py  user.py
src/util/: logger.py
