[tool.poetry]
name = "hackathon-aws-gamebuilderchallenge"
version = "0.1.0"
description = ""
authors = ["Toyo-Daichi <daichi.toyooka.gu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
